src/test/deca/context/invalid/avecObjet/call_unknown_method_custom.deca
// Description :
// appel d'une méthode inexistante
//
// Resultats :
// Erreur contextuelle
// Ligne 10 : méthode inconnue

class N {
    void foo() {}
    void test() {
        fooo(); // doit échouer (typo volontaire)
    }
}
